--- a/welcome.html
+++ b/welcome.html
@@ -10,5 +10,7 @@
     <h2>Welcome</h2>
     <p>Welcome to the Ulysses Cohort</p>
 
+    <p>P tags are for paragraphs and each paragraph is separated in space</p>
+
 </body>
 </html>
