--- a/welcome.html
+++ b/welcome.html
@@ -5,12 +5,84 @@
     <title>Hello World!</title>
 </head>
 <body>
+    <h1 id="#top">Welcome to Veridian Dynamics!</h1>
 
-    <h1>Hello World!!</h1>
-    <h2>Welcome</h2>
-    <p>Welcome to the Ulysses Cohort</p>
 
-    <p>P tags are for paragraphs and each paragraph is separated in space</p>
+    <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><i>technology</i></strong>.</p>
+
+    <hr>
+
+    <h2>Core Values</h2>
+
+        <ul>
+            <li>Competance</li>
+            <li>Involvment</li>
+            <li>Technology</li>
+        </ul>
+
+    <h2>Our Process</h2>
+
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+        </ol>
+
+    <h2>2020 Vision</h2>
+
+        <ul>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by %20</li>
+            <li>Increase Business by %30</li>
+        </ul>
+
+    <hr>
+
+    <h2>Company Vision</h2>
+
+    <img src="https://images.pexels.com/photos/567633/pexels-photo-567633.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400">
+
+    <h2>Our Product</h2>
+
+    <table>
+
+        <tr>
+            <th><strong>Plan</strong></th>
+            <th><strong>Price</strong></th>
+            <th><strong>Features</strong></th>
+        </tr>
+
+        <tr>
+            <td>Starter</td>
+            <td>$99</td>
+            <td>Base Technology</td>
+        </tr>
+
+        <tr>
+
+            <td>Advanced</td>
+            <td>$199</td>
+             <td>Additional Features</td>
+
+        </tr>
+
+        <tr>
+
+            <td>Premium</td>
+            <td>$499</td>
+            <td>Unlimited Support</td>
+
+        </tr>
+
+    </table>
+
+        <p><em>All products come with our guarantee &trade;</em></p>
+
+        <a href="#top">Go to the top of the page.</a>
+
+
+
+
 
 </body>
 </html>
