--- a/welcome.html
+++ b/welcome.html
@@ -40,11 +40,21 @@
 
     <h2>Company Vision</h2>
 
-    <img src="https://images.pexels.com/photos/567633/pexels-photo-567633.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400">
-
-    <h2>Our Product</h2>
-
     <table>
+
+        <tr>
+            <td><img src="https://images.pexels.com/photos/567633/pexels-photo-567633.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400"></td>
+
+            <td><img src="https://res.cloudinary.com/twenty20/private_images/t_watermark-criss-cross-10/v1494362802000/photosp/b1975610-9035-4ac2-93eb-631d68d6d02e/stock-photo-business-office-creative-group-desk-meeting-collaboration-students-boardroom-b1975610-9035-4ac2-93eb-631d68d6d02e.jpg" height="450" width="400"/></td>
+        </tr>
+        <tr>
+            <td><img src="https://images.pexels.com/photos/36744/agriculture-arable-clouds-countryside.jpg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400"/></td>
+            <td><img src="https://images.pexels.com/photos/414523/pexels-photo-414523.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400" </td>
+
+        </tr>
+
+        <table/>
+    < <h2>Our Product</h2>table>
 
         <tr>
             <th><strong>Plan</strong></th>
