--- a/welcome.html
+++ b/welcome.html
@@ -54,7 +54,8 @@
         </tr>
 
         <table/>
-    < <h2>Our Product</h2>table>
+
+        <h2>Our Product</h2>table>
 
         <tr>
             <th><strong>Plan</strong></th>
