--- a/welcome.html
+++ b/welcome.html
@@ -52,10 +52,12 @@
             <td><img src="https://images.pexels.com/photos/414523/pexels-photo-414523.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400" </td>
 
         </tr>
+    </table>
 
-        <table/>
+        <h2>Our Product</h2>
 
-        <h2>Our Product</h2>table>
+
+        <table>
 
         <tr>
             <th><strong>Plan</strong></th>
