--- a/welcome.html
+++ b/welcome.html
@@ -91,7 +91,7 @@
 
         <p><em>All products come with our guarantee &trade;</em></p>
 
-        <a href="#top">Go to the top of the page.</a>
+    <a href="#top"><strong>Go to the top of the page.</strong></a>
 
 
 
