--- a/login.html
+++ b/login.html
@@ -9,7 +9,12 @@
     <form>
 
        <label for="username">Username</label>
-        <input id="username" name="username" type="text" autofocus="autofocus">
+        <input id="username" name="username" type="text" autofocus="autofocus" required>
+
+        <br>
+
+        <label for="email">Email</label>
+        <input id="email" name="email" type="text" required>
 
 
 
