--- a/login.html
+++ b/login.html
@@ -16,6 +16,13 @@
         <label for="email">Email</label>
         <input id="email" name="email" type="text" required>
 
+        <br>
+
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" required>
+
+
+
 
 
 
