added checked checkbox for keeping logged in, submit input, and request bin action and POST method

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <form>
+    <form method="post" action="https://requestb.in/1m1hqli1">
 
        <label for="username">Username</label>
         <input id="username" name="username" type="text" autofocus="autofocus" required>
@@ -21,12 +21,13 @@
         <label for="password">Password</label>
         <input id="password" type="password" name="password" required>
 
+        <br>
 
+        <label><input name="logged_in" value="true" type="checkbox" checked>Keep me logged in for 2 weeks</label>
 
+        <br>
 
-
-
-
+        <input type="submit">
 
     </form>
 
