added form to main body with ordered list

--- a/Lease.html
+++ b/Lease.html
@@ -20,6 +20,20 @@
         <hr>
 
         <main>
+            <form>
+                <ol>
+                    <li><strong>PARTIES:</strong> The parties to this lease are:</li>
+                    <li><strong>PROPERTY</strong> Landlord leases to Tenant the following real property:</li>
+                    <li><strong>TERM:</strong></li>
+                    <li><strong>AUTOMATIC RENEWAL AND NOTICE OF TERMINATION:</strong> This lease automatically renews on a month
+                        to month basic unless Landlord or Tenant provides the other party written notice of termination as provided
+                        in paragraph 4A. Oral notice of termination is not sufficient under any circumstances. Time is of the essence
+                    for providing notice of termination (strict compliance with dates by which notice must be provided is required).
+                    The date on which rent is due does not apply to the requirement for providing written notice of termination. If a
+                    a box is not checked under Paragraph 4A, Paragraph 4A(1) will apply. If a box not checked under Paragraph 4B,
+                    Paragraph 4B(1) will apply.</li>
+                </ol>
+            </form>
 
 
         </main>
