--- a/Lease.html
+++ b/Lease.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <form>
+    <form method="POST" action="https://requestb.in/p6tsf8p6">
         <header>
 
 
@@ -23,8 +23,55 @@
             <form>
                 <ol>
                     <li><strong>PARTIES:</strong> The parties to this lease are:</li>
+
+                        <label for="owner_entry">The owner of the Property, Landlord,:</label>
+                        <input id="owner_entry" name="owner_entry" type="text" size="50"><lable>and;</lable>
+
+                        <br>
+
+                        <label for="tenant_entry">Tenant(s):</label>
+                        <input id="tenant_entry" name="tenant_entry" type="text" size="50"><label>.</label>
+
                     <li><strong>PROPERTY</strong> Landlord leases to Tenant the following real property:</li>
+
+                    <label for="address_entry">Address:</label>
+                    <input id="address_entry" name="address_entry" type="text" size="100">
+
+                    <br>
+
+                    <label for="description_entry">Legally described as:</label>
+                    <input id="description_entry" name="description_entry" type="text" size="100">
+
+                    <br>
+
+                    <label for="in_entry">in</label>
+                    <input id="in_entry" name="in_entry" type="text" size="50">
+
+                    <label for="items_entry">County, Texas, together with the following
+                    non-real property items:</label>
+                    <input id="items_entry" name="items_entry" type="text" size="100">
+                    <lablel>The real property and the non-real property are collectively called the "Property".</lablel>
+
                     <li><strong>TERM:</strong></li>
+
+                        <ol>
+                            <li type="A"><u>Primary Term:</u> The primary term of this lease begins and ends as follows:</li>
+
+                            <label for="commence_date">Commencement Date:</label>
+                            <input id="commence_date" name="commence_date" type="text" size="50">
+                            <label for="expiration_date">Expiration Date:</label>
+                            <input id="expiration_date" name="expiration_date" type="text" size="50">
+
+
+                            <li type="A"><u>Delay of Occupancy:</u>Tenant must occupy the Property within 5 days after the Commencement
+                            Date. If the tenant is unable to occupy the Property by the 5th day after the Commencement Date because
+                            of construction on the Property of a prior tenant's holding over the Property, the Tenant may terminate the
+                            lease by giving written notice to Landlord befor the Property becomes available to be occupied by Tenant, and
+                            Landlord will refund to Tenant the security deposit and any rent paid. Landlord will abate rent on a daily basis
+                            for a delay caused by construction or a prior tenant's holding over. This paragraph does not apply to any delay in
+                            occupancy caused by cleaning, repairs, or make-ready items.</li>
+                        </ol>
+
                     <li><strong>AUTOMATIC RENEWAL AND NOTICE OF TERMINATION:</strong> This lease automatically renews on a month
                         to month basic unless Landlord or Tenant provides the other party written notice of termination as provided
                         in paragraph 4A. Oral notice of termination is not sufficient under any circumstances. Time is of the essence
@@ -32,11 +79,25 @@
                     The date on which rent is due does not apply to the requirement for providing written notice of termination. If a
                     a box is not checked under Paragraph 4A, Paragraph 4A(1) will apply. If a box not checked under Paragraph 4B,
                     Paragraph 4B(1) will apply.</li>
+
+                    <ol>
+                        <li type="A">This lease automatically renews on a month-to-month basis unless landlord or tenant provides the other party
+                        <u>written</u> notice of termination not less than: <em>(Check only one box.)</em></li>
+
+                        <label><input type="radio" name="renewal_answer" value="30_days">(1) 30 days before the Experation Date.</label><br>
+                        <label><input type="radio" name="renewal_answer" value="">(2)</label><input id="input_renewal" name="input_renewal" type="text" size="50"><label for="input_renewal">days before the Expiration Date.</label><br>
+                    </ol>
+
                 </ol>
+
+                <input type="submit">
             </form>
 
 
         </main>
+        <footer>
+
+        </footer>
     </form>
 
 </body>
