--- a/welcome.html
+++ b/welcome.html
@@ -5,10 +5,10 @@
     <title>Hello World!</title>
 </head>
 <body>
-    <h1 id="#top">Welcome to Veridian Dynamics!</h1>
+    <h1 id="#top" style="color: red;">Welcome to Veridian Dynamics!</h1>
 
 
-    <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><i>technology</i></strong>.</p>
+    <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><em>technology</em></strong>.</p>
 
     <hr>
 
