--- a/welcome.html
+++ b/welcome.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 id="#top" style="color: red;">Welcome to Veridian Dynamics!</h1>
+    <h1 id="#top" class="fancy-header">Welcome to Veridian Dynamics!</h1>
 
 
     <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><em>technology</em></strong>.</p>
