--- a/welcome.html
+++ b/welcome.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .fancy-header {
+            color: blue;
+            text-decoration: blue;
+        }
+    </style>
 </head>
 <body>
-    <h1 id="#top" class="fancy-header">Welcome to Veridian Dynamics!</h1>
+    <h1 id="#top" style="color: red; text-decoration: underline;" class="fancy-header">Welcome to Veridian Dynamics!</h1>
 
 
     <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><em>technology</em></strong>.</p>
