Bug fixes with the a tag states centering headers

--- a/welcome.html
+++ b/welcome.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Karma" rel="stylesheet">
+
 
 
 </head>
-<body>
-    <h1 id="#top"  class="fancy-header">Welcome to Veridian Dynamics!</h1>
+<body id="#top">
+
+    <main>
+
+    <h1 id="center">Welcome to Veridian Dynamics!</h1>
 
 
-    <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><em>technology</em></strong>.</p>
+    <p id="center">At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><em>technology</em></strong>.</p>
 
     <hr>
 
@@ -43,19 +48,19 @@
 
     <h2>Company Vision</h2>
 
-    <table>
+    <div>
+            <img src="https://images.pexels.com/photos/567633/pexels-photo-567633.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400">
 
-        <tr>
-            <td><img src="https://images.pexels.com/photos/567633/pexels-photo-567633.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400"></td>
+            <img src="https://res.cloudinary.com/twenty20/private_images/t_watermark-criss-cross-10/v1494362802000/photosp/b1975610-9035-4ac2-93eb-631d68d6d02e/stock-photo-business-office-creative-group-desk-meeting-collaboration-students-boardroom-b1975610-9035-4ac2-93eb-631d68d6d02e.jpg" height="450" width="400"/>
 
-            <td><img src="https://res.cloudinary.com/twenty20/private_images/t_watermark-criss-cross-10/v1494362802000/photosp/b1975610-9035-4ac2-93eb-631d68d6d02e/stock-photo-business-office-creative-group-desk-meeting-collaboration-students-boardroom-b1975610-9035-4ac2-93eb-631d68d6d02e.jpg" height="450" width="400"/></td>
-        </tr>
-        <tr>
-            <td><img src="https://images.pexels.com/photos/36744/agriculture-arable-clouds-countryside.jpg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400"/></td>
-            <td><img src="https://images.pexels.com/photos/414523/pexels-photo-414523.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400" </td>
+            <img src="https://images.pexels.com/photos/36744/agriculture-arable-clouds-countryside.jpg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400"/>
 
-        </tr>
-    </table>
+            <img src="https://images.pexels.com/photos/414523/pexels-photo-414523.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400">
+
+    </div>
+
+
+    
 
         <h2>Our Product</h2>
 
@@ -97,7 +102,7 @@
     <a href="#top"><strong>Go to the top of the page.</strong></a>
 
 
-
+    </main>
 
 
 </body>
