--- a/welcome.html
+++ b/welcome.html
@@ -13,10 +13,15 @@
 
     <main>
 
-    <h1 id="center">Welcome to Veridian Dynamics!</h1>
+    <header id="center">
+
+        <h1>Welcome to Veridian Dynamics!</h1>
 
 
-    <p id="center">At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><em>technology</em></strong>.</p>
+        <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problems with <strong><em>technology</em></strong>.</p>
+
+    </header>
+
 
     <hr>
 
@@ -60,7 +65,7 @@
     </div>
 
 
-    
+
 
         <h2>Our Product</h2>
 
