--- a/css_positioning.html
+++ b/css_positioning.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet"  href="css/positioning.css">
 </head>
 <body>
+<div id="ribbon"><img src="img/codeup-ribbon.png"></div>
 <h1 id="header-top"><a href="https://en.wikipedia.org/wiki/Visible_spectrum">Visible Spectrum Wavelengths</a></h1>
-<div id="box-red" class="box"><img class="arrow" src="img/codeup-arrow.png"/> 620-750 nm</div>
-<div id="box-orange" class="box"><img class="arrow" src="img/codeup-arrow.png"/>590-620 nm</div>
-<div id="box-yellow" class="box"><img class="arrow" src="img/codeup-arrow.png"/>570-590 nm</div>
-<div id="box-green" class="box"><img class="arrow" src="img/codeup-arrow.png"/>495-570 nm</div>
-<div id="box-blue" class="box"><img class="arrow" src="img/codeup-arrow.png"/>450-495 nm</div>
-<div id="box-violet" class="box"><img class="arrow" src="img/codeup-arrow.png"/>380-450 nm</div>
+
+<div id="box-red" class="box"><img  src="img/codeup-arrow.png"/> 620-750 nm</div>
+<div id="box-orange" class="box"><img  src="img/codeup-arrow.png"/>590-620 nm</div>
+<div id="box-yellow" class="box"><img src="img/codeup-arrow.png"/>570-590 nm</div>
+<div id="box-green" class="box"><img src="img/codeup-arrow.png"/>495-570 nm</div>
+<div id="box-blue" class="box"><img  src="img/codeup-arrow.png"/>450-495 nm</div>
+<div id="box-violet" class="box"><img  src="img/codeup-arrow.png"/>380-450 nm</div>
+
 </body>
 </html>
