Positioning exercise bonus with 3 columns of two

--- a/css_exercises.html
+++ b/css_exercises.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>CSS exersices</title>
+    <link rel="stylesheet" href="css/styles.css"
+    <style>
+        /*selector*/
+        h2 {
+           /*rules*/
+            background-color: #b4d455;
+        }
+
+    </style>
 </head>
 <body>
-$END$
+
+<h1>Include styles inline</h1>
+
+<h2>This element will have a different background</h2>
+
+<p style="color: red;">lorem ipsum dolor sit.</p>
+<p style="color: red;">lorem ipsum dolor sit.</p>
+<p style="color: red;">
+    lorem ipsum dolor sit.
+</p>
+
 </body>
 </html>
