--- a/forms.html
+++ b/forms.html
@@ -17,31 +17,34 @@
 
         <br>
 
+        <label>Bio</label>
+
+        <br>
+
         <textarea name="bio" rows="10" cols="30"></textarea>
 
         <br>
 
-        <h3>How did you hear about us?</h3>
 
-        <br>
 
-        <label><input name="billboard" value="true" type="checkbox" >Billboard</label>
+        <div>
+            <label>How did you hear about us?</label>
+
+        <label><input name="billboard" value="true" type="checkbox">Billboard</label>
         <label><input name="radio advertisement" value="true" type="checkbox" >Radio Advertisement</label>
-        <label><input name="internet advertisement" value="true" type="checkbox" >Internet Advertisement</label>
-        <label><input name="Other" value="true" type="checkbox" >Other</label>
+        <label><input name="internet advertisement" value="true" type="checkbox">Internet Advertisement</label>
+        <label><input name="Other" value="true" type="checkbox">Other</label>
 
-        <h3>What web browser are you using?</h3>
+        </div>
 
-        <br>
-
-        <select name="browser">
+        <div>
+        <label>What web browser are you using?<select name="browser">
             <option value="safari">Safari</option>
             <option value="firefox">Firefox</option>
             <option value="chrome">Chrome</option>
-        </select>
+        </select></label>
 
-        <br>
-        <br>
+        </div>
 
         <input type="submit">
 
