--- a/people.html
+++ b/people.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Github people</title>
+    <link rel="stylesheet" href="css/people.css">
 </head>
 <body>
 
@@ -10,33 +11,37 @@
         <img src="http://lorempixel.com/25/25" alt="Logo"/>
 
         <nav>
-            <ul>
-                <li><a href="#">Pull Requests</a></li>
-                <li><a href="#">Issues</a></li>
-                <li><a href="#">Marketplace</a></li>
-                <li><a href="#">Explore</a></li>
+            <ul class="nav-links">
+                <li class="nav-item"><a class="top-nav-link" href="#">Pull Requests</a></li>
+                <li class="nav-item"><a class="top-nav-link" href="#">Issues</a></li>
+                <li class="nav-item"><a class="top-nav-link" href="#">Marketplace</a></li>
+                <li class="nav-item"><a class="top-nav-link" href="#">Explore</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+
+        <!--cmd + opt + t, followed by t again-->
+
+        <section>
         <h1>
-            <a href="#">
+            <a #ahref class="main-nav-link">
                 <img src="http://lorempixel.com/25/25" alt="Logo">
                 CodeupClassroom
             </a>
         </h1>
         <nav>
-            <ul>
-                <li><a href="#">Repositories <span>37</span></a></li>
-                <li><a href="#">People <span>4</span></a></li>
-                <li><a href="#">Teams <span>4</span></a></li>
-                <li><a href="#">Projects <span>4</span></a></li>
+            <ul class="nav-links">
+                <li class="nav-item"><a class="tab-link" href="#">Repositories <span>37</span></a></li>
+                <li class="nav-item"><a class="tab-link" href="#">People <span>4</span></a></li>
+                <li class="nav-item"><a class="tab-link" href="#">Teams <span>4</span></a></li>
+                <li class="nav-item"><a class="tab-link" href="#">Projects <span>4</span></a></li>
             </ul>
         </nav>
 
         <table>
-            <tr>
+            <tr class="title-row">
                 <th>Select All</th>
             </tr>
             <tr>
@@ -54,6 +59,7 @@
 
             </tr>
         </table>
+        </section>
     </main>
 
 </body>
