--- a/welcome.html
+++ b/welcome.html
@@ -11,7 +11,7 @@
 </head>
 <body id="#top">
 
-    <main>
+
 
     <header id="center">
 
@@ -22,93 +22,101 @@
 
     </header>
 
-
+    <main id="container-top">
     <hr>
+        <div id="about_bar">
+            <div class="about_us">
+                <h2>Core Values</h2>
 
-    <h2>Core Values</h2>
+                    <p>Competance</p>
+                    <p>Involvment</p>
+                    <p>Technology</p>
+            </div>
 
-        <ul>
-            <li>Competance</li>
-            <li>Involvment</li>
-            <li>Technology</li>
-        </ul>
+            <div class="about_us">
 
-    <h2>Our Process</h2>
+                <h2>Our Process</h2>
 
-        <ol>
-            <li>Plan</li>
-            <li>Evaluate</li>
-            <li>Implement</li>
-        </ol>
+                    <p>Plan</p>
+                    <p>Evaluate</p>
+                    <p>Implement</p>
 
-    <h2>2020 Vision</h2>
+            </div>
 
-        <ul>
-            <li>Become #1 in Technology</li>
-            <li>Increase Success by %20</li>
-            <li>Increase Business by %30</li>
-        </ul>
+            <div class="about_us">
+                <h2>2020 Vision</h2>
 
-    <hr>
+                    <p>Become #1 in Technology</p>
+                    <p>Increase Success by %20</p>
+                    <p>Increase Business by %30</p>
 
-    <h2>Company Vision</h2>
-
-    <div>
-            <img src="https://images.pexels.com/photos/567633/pexels-photo-567633.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400">
-
-            <img src="https://res.cloudinary.com/twenty20/private_images/t_watermark-criss-cross-10/v1494362802000/photosp/b1975610-9035-4ac2-93eb-631d68d6d02e/stock-photo-business-office-creative-group-desk-meeting-collaboration-students-boardroom-b1975610-9035-4ac2-93eb-631d68d6d02e.jpg" height="450" width="400"/>
-
-            <img src="https://images.pexels.com/photos/36744/agriculture-arable-clouds-countryside.jpg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400"/>
-
-            <img src="https://images.pexels.com/photos/414523/pexels-photo-414523.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400">
-
-    </div>
+            </div>
+        </div>
 
 
+        <section class="vision">
+
+            <h2>Company Vision</h2>
+
+            <div id="container-margin">
+                    <img class="main-image" src="https://images.pexels.com/photos/567633/pexels-photo-567633.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400">
+
+                    <img class="main-image" src="https://res.cloudinary.com/twenty20/private_images/t_watermark-criss-cross-10/v1494362802000/photosp/b1975610-9035-4ac2-93eb-631d68d6d02e/stock-photo-business-office-creative-group-desk-meeting-collaboration-students-boardroom-b1975610-9035-4ac2-93eb-631d68d6d02e.jpg" height="450" width="400"/>
+
+                    <img class="main-image" src="https://images.pexels.com/photos/36744/agriculture-arable-clouds-countryside.jpg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400"/>
+
+                    <img class="main-image" src="https://images.pexels.com/photos/414523/pexels-photo-414523.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" height="450" width="400">
+
+            </div>
+
+        </section>
 
 
         <h2>Our Product</h2>
 
 
-        <table>
+        <table id="center-container">
 
         <tr>
-            <th><strong>Plan</strong></th>
-            <th><strong>Price</strong></th>
-            <th><strong>Features</strong></th>
+            <th class="table-center"><strong>Plan</strong></th>
+            <th class="table-center"><strong>Price</strong></th>
+            <th class="table-center"><strong>Features</strong></th>
         </tr>
 
         <tr>
-            <td>Starter</td>
-            <td>$99</td>
-            <td>Base Technology</td>
-        </tr>
-
-        <tr>
-
-            <td>Advanced</td>
-            <td>$199</td>
-             <td>Additional Features</td>
-
+            <td class="table-center">Starter</td>
+            <td class="table-center">$99</td>
+            <td class="table-center">Base Technology</td>
         </tr>
 
         <tr>
 
-            <td>Premium</td>
-            <td>$499</td>
-            <td>Unlimited Support</td>
+            <td class="table-center">Advanced</td>
+            <td class="table-center">$199</td>
+             <td class="table-center">Additional Features</td>
+
+        </tr>
+
+        <tr>
+
+            <td class="table-center">Premium</td>
+            <td class="table-center">$499</td>
+            <td class="table-center">Unlimited Support</td>
 
         </tr>
 
     </table>
 
+
+
+
+    </main>
+    <footer id="center">
         <p><em>All products come with our guarantee &trade;</em></p>
 
     <a href="#top"><strong>Go to the top of the page.</strong></a>
 
-
-    </main>
-
+    </footer>
 
 </body>
 </html>
