responsive exercise itteration two with adjustments to footer and social media icons.

--- a/media-queries.html
+++ b/media-queries.html
@@ -34,9 +34,13 @@
     <footer>
         <p>(c) 2017 All rights reserved</p>
         <div id="social-media-links">
-            <a href="https://www.instagram.com/"><img src="img/if_instagram_online_social_media_734394.png"></a>
-            <a href="https://www.facebook.com"><img src="img/if_facebook_online_social_media_734399.png"></a>
-            <a href="https://www.twitter.com"><img src="img/if_online_social_media_twitter_734377.png"></a>
+
+
+                <a href="https://www.instagram.com/"><img class="soc-img" src="img/if_instagram_online_social_media_734394.png"></a>
+                <a href="https://www.facebook.com"><img class="soc-img" src="img/if_facebook_online_social_media_734399.png"></a>
+                <a href="https://www.twitter.com"><img class="soc-img" src="img/if_online_social_media_twitter_734377.png"></a>
+
+
         </div>
     </footer>
 </body>
