added grid model from grid exercise to media queries.

--- a/media-queries.html
+++ b/media-queries.html
@@ -8,40 +8,56 @@
 
 </head>
 <body>
-    <div class="alert-info hidden-on-desktop">
-        <a href="#main">Skip to main content</a>
-    </div>
-    <h1>Company</h1>
-    <nav>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="header-img">
-        <img src="img/Cover_Jedi.jpg" alt="">
-    </div>
-    <section id="main" class="main">
-        <h2>Main Section</h2>
-        <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
-    </section>
-    <section class="sub-section">
-        <h2>Sub-section</h2>
-        <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
-    </section>
-    <footer>
-        <p>(c) 2017 All rights reserved</p>
-        <div id="social-media-links">
 
+    <div class="container">
+        <header class="row">
+            <div class="alert-info hidden-on-desktop">
+                <a href="#main">Skip to main content</a>
+            </div>
 
-                <a href="https://www.instagram.com/"><img class="soc-img" src="img/if_instagram_online_social_media_734394.png"></a>
-                <a href="https://www.facebook.com"><img class="soc-img" src="img/if_facebook_online_social_media_734399.png"></a>
-                <a href="https://www.twitter.com"><img class="soc-img" src="img/if_online_social_media_twitter_734377.png"></a>
-
-
+            <div class="column one-half">
+                <h1>Company</h1>
+            </div>
+            <div class="column one-half">
+                <nav>
+                    <ul class="nav-links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Work</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="row">
+            <img src="img/Cover_Jedi.jpg" alt="">
         </div>
-    </footer>
+        <div class="row">
+            <section id="main" class="column one-half">
+                <h2>Main Section</h2>
+                <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+            </section>
+            <section class="column one-half">
+                <h2>Sub-section</h2>
+                <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+            </section>
+        </div>
+        <footer class="row">
+            <div class="column one-half">
+                <p>(c) 2017 All rights reserved</p>
+            </div>
+            <div class="column one-half">
+                <div id="social-media-links">
+
+
+                        <a href="https://www.instagram.com/"><img class="soc-img" src="img/if_instagram_online_social_media_734394.png"></a>
+                        <a href="https://www.facebook.com"><img class="soc-img" src="img/if_facebook_online_social_media_734399.png"></a>
+                        <a href="https://www.twitter.com"><img class="soc-img" src="img/if_online_social_media_twitter_734377.png"></a>
+
+
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
