--- a/grid-layout.html
+++ b/grid-layout.html
@@ -17,6 +17,7 @@
         <div class="column one-third">1/3</div>
         <div class="column one-third">1/3</div>
     </div>
+
     <div class="row">
         <div class="column one-fourth">1/4</div>
         <div class="column one-fourth">1/4</div>
@@ -32,6 +33,25 @@
         <div class="column one-eighth">1/8</div>
         <div class="column one-eighth">1/8</div>
         <div class="column one-eighth">1/8</div>
+    </div>
+    <div class="row">
+        <div class="column two-thirds">2/3</div>
+        <div class="column two-thirds">2/3</div>
+    </div>
+    <div class="row">
+        <div class="column three-eighth">3/8</div>
+        <div class="column three-eighth">3/8</div>
+        <div class="column three-eighth">3/8</div>
+    </div>
+
+    <div class="row">
+        <div class="column two-fourth">2/4</div>
+        <div class="column two-fourth">2/4</div>
+    </div>
+    <div class="row">
+        <div class="column three-sixth">3/6</div>
+        <div class="column three-sixth">3/6</div>
+        <div class="column three-sixth">3/6</div>
     </div>
     <div class="row">
         <div class="column one-fourth">1/4</div>
