--- a/grid-layout.html
+++ b/grid-layout.html
@@ -9,20 +9,20 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="column one-half">1/2</div>
-        <div class="column one-half">1/2</div>
+        <div class="column one-half offset-one-half">1/2</div>
+        <div class="column one-half offset-one-half">1/2</div>
     </div>
     <div class="row">
-        <div class="column one-third">1/3</div>
-        <div class="column one-third">1/3</div>
-        <div class="column one-third">1/3</div>
+        <div class="column one-third offset-one-third">1/3</div>
+        <div class="column one-third offset-one-third">1/3</div>
+        <div class="column one-third offset-one-third">1/3</div>
     </div>
 
     <div class="row">
-        <div class="column one-fourth">1/4</div>
-        <div class="column one-fourth">1/4</div>
-        <div class="column one-fourth">1/4</div>
-        <div class="column one-fourth">1/4</div>
+        <div class="column one-fourth offset-one-fourth">1/4</div>
+        <div class="column one-fourth offset-one-fourth">1/4</div>
+        <div class="column one-fourth offset-one-fourth">1/4</div>
+        <div class="column one-fourth offset-one-fourth">1/4</div>
     </div>
     <div class="row">
         <div class="column one-eighth">1/8</div>
@@ -35,8 +35,8 @@
         <div class="column one-eighth">1/8</div>
     </div>
     <div class="row">
-        <div class="column two-thirds">2/3</div>
-        <div class="column two-thirds">2/3</div>
+        <div class="column two-thirds offset-two-third">2/3</div>
+        <div class="column two-thirds offset-two-third">2/3</div>
     </div>
     <div class="row">
         <div class="column three-eighth">3/8</div>
