--- a/media-queries.html
+++ b/media-queries.html
@@ -5,6 +5,7 @@
     <title>Media Queries</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="stylesheet" href="css/grid-layout.css">
 
 </head>
 <body>
