--- a/order-pizza.html
+++ b/order-pizza.html
@@ -40,7 +40,7 @@
         </form>
 
     </div>
-    <div class="col d-none d-sm-none d-md-block d-xl-none">
+    <div class="col d-none d-sm-none d-md-block">
         <button type="submit" class="btn btn-primary h-10"><i class="material-icons">person</i>Sign in</button>
     </div>
 
@@ -235,10 +235,11 @@
                             </div>
                         </div>
                         <div class="card-footer">
+                            <div class="center">
                             <a href="#" class="btn btn-primary ml-2"><i class="material-icons">shopping_cart</i>
                                 Checkout</a>
                             <a href="#" class="btn btn-primary ml-2">< Previous Step</a>
-
+                            </div>
                         </div>
                     </div>
 
