adding listeners to dom-querry-js.html

--- a/ryan-bonus.html
+++ b/ryan-bonus.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>js practice</title>
+	<script src="js/ryan-bonus.js"></script>
 </head>
 <body>
 <script src="js-practice.js"></script>
