--- a/dom-querry-js.html
+++ b/dom-querry-js.html
@@ -25,39 +25,71 @@
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
+
+<button type="button" id="button-1">Click Me</button>
+<button type="button" id="button-2">Click Me</button>
+<button type="button" id="button-3">Click Me</button>
+<button type="button" id="button-4">Click Me</button>
+
+
 <script>
-    (function() {
+    (function () {
         "use strict";
         // TODO: Uncomment next line and get the main header element by id
         var mainHeader = document.getElementById('main-header');
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "JavaScript is Cool";
+        var listener = function (event) {
 
+            mainHeader.innerHTML = "JavaScript is Cool";
+        };
+        document.getElementById('button-1').addEventListener('click', listener, false);
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById('sub-header');
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = 'blue';
+        var listener = function (event) {
+            subHeader.style.color = 'blue';
+        };
+        document.getElementById('button-2').addEventListener('click', listener, false);
 
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName('li');
 
         // TODO: Set text color on every other list item to grey
-        for(var i =0; i<listItems.length; i++){
-            if(i % 2 === 0){
-                listItems[i].style.color = "red";
+
+        var listener = function (event) {
+            for (var i = 0; i < listItems.length; i++) {
+                if (i % 2 === 0) {
+                    listItems[i].style.color = "red";
+                }else{
+
+                    listItems[0].style.color = 'blue';
+                }
             }
-        }
+        };
+        document.getElementById('button-3').addEventListener('click', listener, false);
         // TODO: Set text color of li with dbid = 1 to blue
-        listItems[0].style.color = 'blue';
+
+
 
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
         var subParagraphs = document.getElementsByClassName('sub-paragraph');
 
+
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerText = "Mission Accomplished!";
+
+        var listener = function(event){
+            subParagraphs[0].innerText = "Mission Accomplished!";
+        };
+        document.getElementById('button-4').addEventListener('click', listener, false);
+
+        // Add 4 buttons to the page. Attach click event listeners to each of the buttons and have the
+        // handlers perform the modifications that were automatically taking place. For example, the first button
+        // should set inner html of mainHeader to "JavaScript is Cool".
+        //     View the results in your browser to test for the expected output.
+        //     Finally, save your work, commit the changes to your git repository, and push to GitHub.
 
 
     })();
