--- a/dom-querry-js.html
+++ b/dom-querry-js.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 
+
+
+<button type="button" id="button-1">Make me cool!</button>
+<button type="button" id="button-2">Make me blue!</button>
+<button type="button" id="button-3">Some red, some blue</button>
+<button type="button" id="button-4">Make me complete!</button>
+<button type="button" id="button-5">Change me back.</button>
+
 <h1 id="main-header">Hello World!</h1>
 <ul>
     <li data-dbid="1">Item 1</li>
@@ -26,10 +34,6 @@
 </p>
 
 
-<button type="button" id="button-1">Click Me</button>
-<button type="button" id="button-2">Click Me</button>
-<button type="button" id="button-3">Click Me</button>
-<button type="button" id="button-4">Click Me</button>
 
 
 <script>
@@ -84,6 +88,13 @@
             subParagraphs[0].innerText = "Mission Accomplished!";
         };
         document.getElementById('button-4').addEventListener('click', listener, false);
+
+        var listener = function(event){
+
+            location.reload();
+
+        };
+        document.getElementById('button-5').addEventListener('click', listener, false);
 
         // Add 4 buttons to the page. Attach click event listeners to each of the buttons and have the
         // handlers perform the modifications that were automatically taking place. For example, the first button
