--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,7 +5,29 @@
     <title>JQuerry Exercise 1</title>
 </head>
 <body>
+<div id="container">
+<h1 class="codeup">Hello World!</h1>
+<p class="codeup">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus
+    diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus
+    sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora
+    torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero.
 
+    Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas
+    mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel,
+    suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus,
+    ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu
+    ad litora torquent per conubia nostra, per inceptos himenaeos.
+
+</p>
+
+<ul class="codeup">
+    <li class="codeup">This Thing</li>
+    <li class="">Or This Thing</li>
+    <li class="codeup">That Thing</li>
+    <li class="codeup">And That Thing</li>
+</ul>
+</div>
 <script src="js/jquery.js"></script>
 <script src="js/jquery_exercises.js"></script>
 </body>
