background color on h1, p, and li

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div id="container">
-<h1 class="codeup">Hello World!</h1>
-<p class="codeup">
+<h1 class="header">Hello World!</h1>
+<p class="content">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus
     diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus
     sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora
@@ -21,11 +21,11 @@
 
 </p>
 
-<ul class="codeup">
-    <li class="codeup">This Thing</li>
-    <li class="">Or This Thing</li>
-    <li class="codeup">That Thing</li>
-    <li class="codeup">And That Thing</li>
+<ul id="list">
+    <li class="list-item">This Thing</li>
+    <li class="list-item">Or This Thing</li>
+    <li class="list-item">That Thing</li>
+    <li class="list-item">And That Thing</li>
 </ul>
 </div>
 <script src="js/jquery.js"></script>
