--- a/ajax-store.html
+++ b/ajax-store.html
@@ -9,12 +9,12 @@
 
 <table id="products">
     <thead>
-        <tr>
-            <th>Title</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Categories</th>
-        </tr>
+    <tr>
+        <th>Title</th>
+        <th>Quantity</th>
+        <th>Price</th>
+        <th>Categories</th>
+    </tr>
     </thead>
     <tbody id="insertProducts"></tbody>
 </table>
@@ -22,15 +22,39 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <script>
-(function() {
-    "use strict";
-    // TODO: Create an ajax GET request for /data/inventory.json
+    (function () {
+        "use strict";
 
-    // TODO: Take the data from inventory.json and append it to the products table
-    //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-    //             its contents and fields
-    //       HINT: You will want to target #insertProducts for your new HTML elements
-})();
+
+        // TODO: Create an ajax GET request for /data/inventory.json
+
+        //pass
+        var request = $.ajax("data/inventory.json");
+        console.log(request);
+        request.done(function (response) {
+            response.forEach(function (item) {
+                $('#insertProducts').append('<tr><td>' + item.title + '</td><td>' + item.quantity + '</td><td>' + item.price + '</td><td>' + item.categories + '</td></tr>');
+
+            })
+
+
+        });
+
+        //fail
+        request.fail(function (jqXhr, status, message) {
+            console.log(jqXhr, status, message);
+
+
+        });
+
+
+        // TODO: Take the data from inventory.json and append it to the products table
+
+
+        //       HINT: Your data should come back as a JSON object; use console.log() to inspect
+        //             its contents and fields
+        //       HINT: You will want to target #insertProducts for your new HTML elements
+    })();
 </script>
 
 </body>
