--- a/google_maps_api.html
+++ b/google_maps_api.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Google Maps Exercise</title>
-    <!--this is the style to give your map a dimension-->
+    <!--this is the style to give your map a dmension-->
     <style>
         #map-canvas {
             width: 500px;
